avoid font control dropdown to be cut off when panel is too small

--- a/scss/_customize-control.scss
+++ b/scss/_customize-control.scss
@@ -207,5 +207,6 @@
 
   .control-section.open {
     border-bottom: 0;
+    height: 100%;
   }
 }
